fixes too large user photo in comments and moderation

--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -49,6 +49,7 @@
 
 .comment .details .userphoto {
   width: 42px;
+  height: 42px;
   position: absolute;
   margin-top: -12px;
   border: 1px solid #aaa;
